# kirby

./: .gitignore  Makefile  README.md  ansible-lint.yaml  behave.ini  galaxy.yml  pyproject.toml
.github/workflows/: ci.yml
examples/: README.md  Rakefile  ansible.cfg  create_files.yml  kirby.cfg
examples/roles/kirby_demo/defaults/: main.yml
examples/roles/kirby_demo/meta/: main.yml
examples/roles/kirby_demo/tasks/: main.yml
examples/spec/localhost/: files_spec.rb
plugins/callback/: kirby.py
plugins/module_utils/: coverage.py  runner.py
src/kirby/: config.py
tests/features/: environment.py
tests/features/steps/: steps.py
tests/features/testdata/: 1task_0changed.yml  1task_1changed.yml  1task_1changed_not_tested.yml  1task_1handler.yml  2tasks_1failed.yml  2tasks_2changed.yml  2tasks_2skipped.yml  30tasks_30skipped.yml  30tasks_30skipped_with_seq.yml  4tasks_2changed.yml  inventory
tests/unit/: conftest.py  test_callback.py  test_config.py  test_coverage.py  test_runner.py
