[build-system]
requires = ["setuptools>=64"]
build-backend = "setuptools.build_meta"

[project]
name = "kirby"
version = "0.2.0"
description = "Code coverage tool for Ansible playbooks using Serverspec"
readme = "README.md"
license = { text = "GPL-3.0-or-later" }
requires-python = ">=3.9"
keywords = ["ansible", "coverage", "serverspec", "testing"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: GNU General Public License v3 or later (GPLv3+)",
    "Programming Language :: Python :: 3",
    "Topic :: Software Development :: Testing",
]

[project.optional-dependencies]
test = [
    "pytest>=8.0",
    "ruff>=0.6",
]
dev = [
    "pytest>=8.0",
    "ruff>=0.6",
    "ansible-lint>=24.0",
    "behave>=1.2",
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests/unit"]

[tool.ruff]
target-version = "py39"
line-length = 88

[tool.ruff.lint]
select = ["E", "W", "F", "I", "UP"]
per-file-ignores = { "tests/features/steps/steps.py" = ["F811"] }

[tool.ruff.lint.isort]
known-first-party = ["kirby"]
