[build-system]
requires = ["setuptools>=64"]
build-backend = "setuptools.build_meta"

[project]
name = "kirby-dev"
version = "0.0.0"
description = "Development tooling for the kirby collection"
requires-python = ">=3.9"

[project.optional-dependencies]
test = [
    "pytest>=8.0",
    "ruff>=0.6",
]
dev = [
    "pytest>=8.0",
    "ruff>=0.6",
    "ansible-lint>=24.0",
    "behave>=1.2",
]

[tool.setuptools]
packages = []

[tool.pytest.ini_options]
testpaths = ["tests/unit"]

[tool.ruff]
target-version = "py39"
line-length = 88

[tool.ruff.lint]
select = ["E", "W", "F", "I", "UP"]
per-file-ignores = { "tests/features/steps/steps.py" = ["F811"] }

[tool.ruff.lint.isort]
known-first-party = []
